src/objects/Component__c.object
<CustomObject>
    <description>Represents the behaviour definition for CG components that can be use in a community. For each lightning component available on the community builder, there is one component record type.</description>
    <fields>
        <fullName>ArticleType__c</fullName>
        <label>Article Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landscape</fullName>
                </value>
                <value>
                    <fullName>Portrait</fullName>
                </value>
                <value>
                    <fullName>Highlight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomaticTransition__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determina si los contenidos transicionan o no de forma automática.</description>
        <inlineHelpText>Determina si los contenidos transicionan o no de forma automática.</inlineHelpText>
        <label>Automatic transition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BannerFrameType__c</fullName>
        <defaultValue>&quot;Hero&quot;</defaultValue>
        <description>This field allows users to define the banner rather a small, medium or large on the page added</description>
        <inlineHelpText>Para presentación horizontal | Hero banner , 3 , 1 | Page banner , 6 , 1 | Tiny banner , 1 , 1 |||||| Para presentación vertical | Hero banner , 1 , 3 | Page banner , 1 , 6 | Tiny banner , 1 , 1</inlineHelpText>
        <label>Banner Frame Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BannerFrameType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BannerTransitionTime__c</fullName>
        <defaultValue>5000</defaultValue>
        <inlineHelpText>Time between content in milliseconds</inlineHelpText>
        <label>Banner transition time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BannerType__c</fullName>
        <description>Use this field to define the banner&apos;s behavior.</description>
        <label>Banner Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Fade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClusterExternalId__c</fullName>
        <formula>Cluster__r.ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cluster__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ClusterRoot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Datasource__c</fullName>
        <label>Datasource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ManualAssignment</fullName>
                    <label>Manual Assignment</label>
                </value>
                <value>
                    <fullName>Tags</fullName>
                </value>
                <value>
                    <fullName>Categories</fullName>
                </value>
                <value>
                    <fullName>TagsCategories</fullName>
                    <label>Tags + Categories</label>
                </value>
                <value>
                    <fullName>ParentComponentBehaviour</fullName>
                    <label>Parent Component Behaviour</label>
                </value>
                <value>
                    <fullName>ParentContentTags</fullName>
                    <label>Parent Content Tags</label>
                </value>
                <value>
                    <fullName>ParentContentCategories</fullName>
                    <label>Parent Content Categories</label>
                </value>
                <value>
                    <fullName>ParentContentTagsCategories</fullName>
                    <label>Parent Content Tags + Categories</label>
                </value>
                <value>
                    <fullName>All Articles</fullName>
                </value>
                <value>
                    <fullName>All Events</fullName>
                </value>
                <value>
                    <fullName>All Blocks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DelayTime__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Time delay in milliseconds.</description>
        <inlineHelpText>Time delay in milliseconds.</inlineHelpText>
        <label>Delay Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Use this field to set up on the component the direction that banner switch the content asociated</description>
        <label>Direction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                    <default>true</default>
                    <label>Right</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventsType__c</fullName>
        <label>Events Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Landscape</fullName>
                </value>
                <value>
                    <fullName>Portrait</fullName>
                </value>
                <value>
                    <fullName>Highlight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludePastEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude Past Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</inlineHelpText>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldsToSearch__c</fullName>
        <description>Content object fields to search for the inserted Global Search text</description>
        <inlineHelpText>Content object fields comma separated</inlineHelpText>
        <label>Fields To Search</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstCluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First Cluster to make a cluster Tree in cluster selector component</description>
        <label>First Cluster to show</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Cluster__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ClusterRoot</value>
            </filterItems>
            <filterItems>
                <field>Cluster__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ClusterGroup</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Components (First Cluster)</relationshipLabel>
        <relationshipName>Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasDelay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HierarchicalOrderBy__c</fullName>
        <label>Cluster Hierarchy Order By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <label>Root to Leaf</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                    <label>Leaf to Root</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LinkDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link Detail</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determina el comportamiento del banner como un bucle.</description>
        <inlineHelpText>Determina el comportamiento del banner como un bucle.</inlineHelpText>
        <label>Loop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchCriteria__c</fullName>
        <label>Match Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>How will be showed the catalog component</description>
        <inlineHelpText>How will be showed the catalog component</inlineHelpText>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Mini</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NavigationMode__c</fullName>
        <label>Navigation Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Horizontal-Simple</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberOfColumns__c</fullName>
        <description>Use this field to define the number of columns to show.</description>
        <inlineHelpText>Use this field to define the number of columns to show.</inlineHelpText>
        <label>Number of Columns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnlyClusterLeaf__c</fullName>
        <defaultValue>true</defaultValue>
        <description>if checked, the user can only select clusters leaf</description>
        <inlineHelpText>if checked, the user can only select clusters leaf</inlineHelpText>
        <label>Only Leaf clusters are selectable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderByAdvance__c</fullName>
        <label>Order by Advance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderBy__c</fullName>
        <label>Order By</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Datasource__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CreatedDate ASC</fullName>
                    <default>true</default>
                    <label>Creation Date ASC</label>
                </value>
                <value>
                    <fullName>CreatedDate DESC</fullName>
                    <label>Creation Date DESC</label>
                </value>
                <value>
                    <fullName>Name ASC</fullName>
                </value>
                <value>
                    <fullName>Name DESC</fullName>
                </value>
                <value>
                    <fullName>Category__r.Name ASC</fullName>
                    <label>Category ASC</label>
                </value>
                <value>
                    <fullName>Category__r.Name DESC</fullName>
                    <label>Category DESC</label>
                </value>
                <value>
                    <fullName>PublishStartDate__c ASC</fullName>
                    <label>Publish Start Date ASC</label>
                </value>
                <value>
                    <fullName>PublishStartDate__c DESC</fullName>
                    <label>Publish Start Date DESC</label>
                </value>
                <value>
                    <fullName>EventStartDate__c ASC</fullName>
                    <label>Event Start Date ASC</label>
                </value>
                <value>
                    <fullName>EventStartDate__c DESC</fullName>
                    <label>Event Start Date DESC</label>
                </value>
                <value>
                    <fullName>Title__c ASC</fullName>
                    <label>Title ASC</label>
                </value>
                <value>
                    <fullName>Title__c DESC</fullName>
                    <label>Title DESC</label>
                </value>
                <value>
                    <fullName>Custom Sorting</fullName>
                </value>
                <value>
                    <fullName>Manual Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orientation__c</fullName>
        <description>Defines the orientation the component is going to be presented</description>
        <inlineHelpText>Select the orientation for the component</inlineHelpText>
        <label>Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Horizontal-Landscape</fullName>
                    <default>true</default>
                    <label>Horizontal-Landscape</label>
                </value>
                <value>
                    <fullName>Vertical-Portrait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PageSize__c</fullName>
        <label>Page Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PagingType__c</fullName>
        <label>Paging Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Paging Bottom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PredictiveSearchEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Predictive Search Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SearchPlaceholder__c</fullName>
        <description>Custom Label name to use as placeholder of the search input box</description>
        <inlineHelpText>Custom Label name to use as placeholder of the search input box</inlineHelpText>
        <label>Search Placeholder Custom Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowBullets__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determina si se muestran los bullets en el banner.</description>
        <inlineHelpText>Determina si se muestran los bullets en el banner.</inlineHelpText>
        <label>Show Bullets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowDisplayMode__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Display Mode on the catalog view</description>
        <inlineHelpText>Show Display Mode on the catalog view</inlineHelpText>
        <label>Show Display Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowFilters__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Filters on the catalog view</description>
        <inlineHelpText>Show Filters on the catalog view</inlineHelpText>
        <label>Show Filters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowOrder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Order on the catalog view</description>
        <inlineHelpText>Show Order on the catalog view</inlineHelpText>
        <label>Show Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowSearch__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show Search on the catalog view</description>
        <inlineHelpText>Show Search on the catalog view</inlineHelpText>
        <label>Show Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StatusApprovalProcess__c</fullName>
        <label>Status approval process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>StatusApprovalProcess</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Manage the status of the record.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TagCriteria__c</fullName>
        <description>It&apos;s the tag criteria to filter the content on the community.</description>
        <inlineHelpText>(1 AND 2) OR 3</inlineHelpText>
        <label>Tag Criteria</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Use this field to define the component title.</description>
        <label>Component Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>Advance_Content</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.AdvanceContent</value>
        </filters>
        <label>Advance Content</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Article_Details</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.ArticleDetail</value>
        </filters>
        <label>Article Details</label>
    </listViews>
    <listViews>
        <fullName>Article_List</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.ArticleList</value>
        </filters>
        <label>Article</label>
    </listViews>
    <listViews>
        <fullName>ArticlesRelated</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.ArticlesRelated</value>
        </filters>
        <label>Articles - Related</label>
    </listViews>
    <listViews>
        <fullName>Banners</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.Banner</value>
        </filters>
        <label>Banners</label>
    </listViews>
    <listViews>
        <fullName>ClusterSelector</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.ClusterSelector</value>
        </filters>
        <label>Cluster Selector</label>
    </listViews>
    <listViews>
        <fullName>Event_Details</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.EventDetail</value>
        </filters>
        <label>Event Details</label>
    </listViews>
    <listViews>
        <fullName>Event_List</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.EventList</value>
        </filters>
        <label>Events</label>
    </listViews>
    <listViews>
        <fullName>EventsRelated</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.EventsRelated</value>
        </filters>
        <label>Events - Related</label>
    </listViews>
    <listViews>
        <fullName>FAQs</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.FAQ</value>
        </filters>
        <label>FAQs</label>
    </listViews>
    <listViews>
        <fullName>LanguageSelectors</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.LanguageSelector</value>
        </filters>
        <label>Language Selectors</label>
    </listViews>
    <listViews>
        <fullName>Menus</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Component__c.Menu</value>
        </filters>
        <label>Menus</label>
    </listViews>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <recordTypes>
        <fullName>AdvanceContent</fullName>
        <active>true</active>
        <description>Configure a new Advance Content component. Each Advance Content component act as a rich text who give you freedom to work for example with HTML code.</description>
        <label>Advance Content</label>
    </recordTypes>
    <recordTypes>
        <fullName>ArticleDetail</fullName>
        <active>true</active>
        <description>Configure a new Article Detail component. This component show Article information such as Main image, Title, Description, etc.</description>
        <label>Article Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ArticleList</fullName>
        <active>true</active>
        <description>Configure a new Article component. Each Article component acts as a placeholder for one or more Articles</description>
        <label>Article List</label>
    </recordTypes>
    <recordTypes>
        <fullName>ArticlesRelated</fullName>
        <active>true</active>
        <description>Configure a new Articles Related component. Each Articles Related component acts as a placeholder for one or more Articles Related</description>
        <label>Articles - Related</label>
    </recordTypes>
    <recordTypes>
        <fullName>Banner</fullName>
        <active>true</active>
        <description>Configure a new Banner component. Each banner component has a given aspect ratio and orientation for its presentation. It also has a given behavior for presenting its content such as carousel or appear-disappear effect.</description>
        <label>Banner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Block</fullName>
        <active>true</active>
        <description>Configure a new Block component. Each Block component acts as a placeholder for one or more Blocks.</description>
        <label>Block</label>
    </recordTypes>
    <recordTypes>
        <fullName>ClusterSelector</fullName>
        <active>true</active>
        <description>Configure a new Cluster Selector component. A Cluster Selector has one or more clusters related to our community.</description>
        <label>Cluster Selector</label>
    </recordTypes>
    <recordTypes>
        <fullName>EventDetail</fullName>
        <active>true</active>
        <description>Configure a new Event Detail component. This component show event information such as event date, event place, event maximum allowance, etc.</description>
        <label>Event Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>EventList</fullName>
        <active>true</active>
        <description>Configure a new Event component. Each event will have related information such as event date, event place, event maximum allowance, etc.</description>
        <label>Event List</label>
    </recordTypes>
    <recordTypes>
        <fullName>EventsRelated</fullName>
        <active>true</active>
        <description>Configure a new Events Related component. Each Events Related component acts as a placeholder for one or more Events Related</description>
        <label>Events - Related</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>Configure a new FAQ component. A FAQ has one or more related pairs of question-answer which are listed in the order defined by the Content Admin</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>LanguageSelector</fullName>
        <active>true</active>
        <description>Configure a new Language Selector component. A Language Selector has one or more related records associated to the respective flag.</description>
        <label>Language Selector</label>
    </recordTypes>
    <recordTypes>
        <fullName>Menu</fullName>
        <active>true</active>
        <description>Configure a new Menu component that has associated Menu records. They can be ordered manually.</description>
        <label>Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>Search</fullName>
        <active>true</active>
        <description>Configure a new Search component. A Search has one or more related records associated to an Object.</description>
        <label>Search</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Clustering__c</fullName>
        <label>Clustering</label>
    </sharingReasons>
    <validationRules>
        <fullName>OrderByAdvanceRequired</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISPICKVAL(OrderBy__c, &apos;Custom Sorting&apos;)
&amp;&amp;
ISBLANK(OrderByAdvance__c)
)</errorConditionFormula>
        <errorDisplayField>OrderByAdvance__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>